--- a/SwiftyInAppLocalization/SwiftyInAppLocalization.xcodeproj/xcshareddata/xcschemes/SwiftyInAppLocalization.xcscheme
+++ b/SwiftyInAppLocalization/SwiftyInAppLocalization.xcodeproj/xcshareddata/xcschemes/SwiftyInAppLocalization.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1160"
+   LastUpgradeVersion = "1250"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "27C6B46B24C702CA00F6CD05"
-               BuildableName = "InAppLocalization.framework"
-               BlueprintName = "InAppLocalization"
-               ReferencedContainer = "container:InAppLocalization.xcodeproj">
+               BuildableName = "SwiftyInAppLocalization.framework"
+               BlueprintName = "SwiftyInAppLocalization"
+               ReferencedContainer = "container:SwiftyInAppLocalization.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -51,9 +51,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "27C6B46B24C702CA00F6CD05"
-            BuildableName = "InAppLocalization.framework"
-            BlueprintName = "InAppLocalization"
-            ReferencedContainer = "container:InAppLocalization.xcodeproj">
+            BuildableName = "SwiftyInAppLocalization.framework"
+            BlueprintName = "SwiftyInAppLocalization"
+            ReferencedContainer = "container:SwiftyInAppLocalization.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
    </ProfileAction>
